--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
             <div id="header-phone">
 
-                <a href="tel:+1-833-647-8824"> <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" 
+                <a class="shadow" href="tel:+1-833-647-8824"> <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" 
                     preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"><path fill="currentColor" d="M24 13h-2a3.003 3.003 0 0 0-3-3V8a5.006 5.006 0 0 1 5 5Z"/>
                     <path fill="currentColor" d="M28 13h-2a7.008 7.008 0 0 0-7-7V4a9.01 9.01 0 0 1 9 9zm-7.667 8.482l2.24-2.24a2.167 2.167 0 0 1 2.337-.48l2.728 
                     1.092A2.167 2.167 0 0 1 29 21.866v4.961a2.167 2.167 0 0 1-2.284 2.169C7.594 27.806 3.732 11.61 3.015 5.408A2.162 2.162 0 0 1 5.169 3h4.873a2.167 
-                    2.167 0 0 1 2.012 1.362l1.091 2.728a2.167 2.167 0 0 1-.48 2.337l-2.24 2.24s1.242 8.732 9.908 9.815z"/></svg>833-NHR-UTAH</a>
+                    2.167 0 0 1 2.012 1.362l1.091 2.728a2.167 2.167 0 0 1-.48 2.337l-2.24 2.24s1.242 8.732 9.908 9.815z"/></svg>833-NHR-UTAH<br>(647-8824)</a>
 
             </div>
 
@@ -55,15 +55,23 @@
         </header>
 
 
-        <div class="full-width">
+        <div class="full-width" id="banner">
 
-            <img src="img/kolob-banner.jpg" alt="New Harmony Ranch landscape shot looking at Kolob Canyon">
+            <img src="img/kolob-canyon-banner.jpg" alt="New Harmony Ranch landscape shot looking at Kolob Canyon">
+            
+            <div id="banner-text">
+
+                <img id="brand-logo" src="img/NHR-white-md.png" alt="New Harmony Ranch brand logo">
+
+                <h1>A Legendary Master<br>Planned Community</h1>
+
+            </div>
 
         </div>
 
         <main>
 
-            <div id="heading">
+            <div class="shadow" id="heading">
                 <h2>Site Overview</h2>
             </div>
 
