meta tags, social banner

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8">
-        <meta name="description" content="">
+        <meta name="description" content="New Harmony Ranch is a legendary master planned community located in Southern Utah. This planned development offers luxury living in a rural settings with amazing views of Kolob Canyons. The planned community is located in between Cedar City, UT and St George, UT along interstate 15. Just 20 minutes to the south of Cedar City and 40 minutes to the north of St George. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
@@ -18,9 +18,9 @@
 
         <meta property="og:title" content="New Harmony Ranch">
         <meta property="og:type" content="website">
-        <meta property="og:description" content="">
+        <meta property="og:description" content="New Harmony Ranch is a legendary master planned community located in Southern Utah.">
         <meta property="og:url" content="https://newharmonyranch.com/">
-        <meta property="og:image" content="">
+        <meta property="og:image" content="https://newharmonyranch.com/img/NHR-social-banner.jpg">
         <meta property="og:site_name" content="New Harmony Ranch">
         <meta name="twitter:card" content="summary_large_image">
 
