added master plan section

--- a/index.html
+++ b/index.html
@@ -81,9 +81,19 @@
                 from Cedar City to the north on I-15, and 35 miles
                 from St George to the south.</p>
             
-            <img id="map-legend" src="img/legend.jpg" alt="Map legened for conceptual map of New Harmony Ranch">
+            <img id="map-legend" src="img/legend.jpg" alt="Map legened for conceptual map of New Harmony Ranch development">
 
-            <img id="map" src="img/map.jpg" alt="Conceptual map of New Harmony Ranch">
+            <img id="map" src="img/map.jpg" alt="Conceptual map of New Harmony Ranch development">
+
+            <div class="shadow" id="heading">
+                <h2>Master Plan</h2>
+            </div>
+
+            <p id="master-desc">Conceptual master plan of the New Harmony Ranch development.</p>
+
+            <img id="map-master" src="img/map-master-plan.jpg" alt="Master plan map of New Harmony Ranch development">
+
+            <img id="legend-master" src="img/legend-master-plan.jpg" alt="Map legend for master plan map of New Harmony Ranch development">
 
         </main>
 
